--- a/scss/styles.css
+++ b/scss/styles.css
@@ -104,7 +104,7 @@ body {
 
 @media (max-width: 1000px) {
   .header .navbar .navbarList {
-    margin-left: 12vw;
+    margin-left: 10vw;
   }
 }
 
@@ -122,14 +122,7 @@ body {
 
 .header .navbar .navbarList .nav_item {
   text-transform: uppercase;
-  width: max-content;
   line-height: 80px;
-}
-
-@media (min-width: 768px) {
-  .header .navbar .navbarList .nav_item {
-    font-size: 13px;
-  }
 }
 
 .header .navbar .navbarList .nav_item .nav_link {
@@ -140,10 +133,24 @@ body {
   margin: 0 10px;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 1100px) {
   .header .navbar .navbarList .nav_item .nav_link {
     font-size: 14px;
-    margin: 0 8px;
+    margin: 0 4px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .header .navbar .navbarList .nav_item .nav_link {
+    font-size: 12px;
+    margin: 0 2px;
+  }
+}
+
+@media (max-width: 900px) {
+  .header .navbar .navbarList .nav_item .nav_link {
+    font-size: 12px;
+    margin: 0;
   }
 }
 
@@ -522,10 +529,22 @@ footer .design_footer ul li p {
   justify-content: flex-start;
 }
 
+@media (max-width: 1024px) {
+  .main_top .section1 .sectionHola {
+    width: 40vw;
+  }
+}
+
 .main_top .section1 .sectionHola .hola {
   font-family: 'DM Serif Display', serif;
   font-size: 72px;
   font-weight: 400;
+}
+
+@media (max-width: 1024px) {
+  .main_top .section1 .sectionHola .hola {
+    font-size: 52px;
+  }
 }
 
 .main_top .section1 .sectionHola .hola2 {
@@ -534,13 +553,24 @@ footer .design_footer ul li p {
   font-size: 28px;
 }
 
+@media (max-width: 1024px) {
+  .main_top .section1 .sectionHola .hola2 {
+    font-size: 22px;
+  }
+}
+
 .main_top .section1 .sectionHola p {
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   font-weight: 600;
-  text-align: justify;
   line-height: 21px;
   margin-top: 8px;
+}
+
+@media (max-width: 1024px) {
+  .main_top .section1 .sectionHola p {
+    font-size: 16px;
+  }
 }
 
 .main_top .section1 .sectionHola .btnSection1 {
@@ -564,9 +594,22 @@ footer .design_footer ul li p {
   text-decoration: none;
 }
 
+@media (max-width: 1024px) {
+  .main_top .section1 .sectionHola .btnSection1 {
+    margin-left: 20%;
+  }
+}
+
 .main_top .section1 .imgHome {
-  width: 620px;
-  height: 640px;
+  width: 656px;
+  height: 656px;
+}
+
+@media (max-width: 1024px) {
+  .main_top .section1 .imgHome {
+    width: 456px;
+    height: 566px;
+  }
 }
 
 .main_top .sectionAyudarte {
@@ -622,6 +665,12 @@ footer .design_footer ul li p {
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
+}
+
+@media (max-width: 1024px) {
+  .main_top .sectionAyudarte .section2 .brandingHome p {
+    font-size: 12px;
+  }
 }
 
 .main_top .sectionAyudarte .section2 .brandingHome:hover {
@@ -713,10 +762,16 @@ footer .design_footer ul li p {
     margin-top: 0;
   }
   .main_top .section1 {
-    margin-top: 0;
+    margin-top: 20px;
     margin-bottom: 0;
   }
-  .main_top .imgHome {
+  .main_top .section1 .sectionHola {
+    width: 100vw;
+  }
+  .main_top .section1 .sectionHola .btnSection1 {
+    margin-left: 40%;
+  }
+  .main_top .section1 .imgHome {
     display: none;
   }
   .main_top .sectionAyudarte {
