--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -79,12 +79,12 @@
 
             .nav_item {
                 text-transform: uppercase;
-                
                 line-height: 80px;
                 
                 .nav_link {
                     text-decoration: none;
                     color: black;
+                    font-family: 'Roboto', sans-serif;
                     font-size: 15px;
                     font-weight: 600;
                     margin: 0 10px;
@@ -117,6 +117,7 @@
                 .nav_linkMenu__active {
                     background: none;
                     border-bottom: 4px solid crimson;
+                    padding-bottom: 5px;
                 }
             }
 
