--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -117,8 +117,6 @@
                 h4{
                     font-family: 'Montserrat', sans-serif;
                     font-size: 14px;
-                    font-weight: 500;
-
                 }
 
                 img{
@@ -131,7 +129,7 @@
                 h6{
                     text-align: center;
                     font-size: 20px;
-                    font-family: 'Open Sans', sans-serif;
+                    font-family: 'DM Serif Display', serif;
                     margin-bottom: 25px;
                 }
 
