--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -431,7 +431,7 @@
         width: 80%;
         margin-top: 140px;
         padding-left: 2vw;
-    
+        font-weight: 600;    
         .branding_calzados{
             display: flex;
             align-items: center;
@@ -439,7 +439,6 @@
     
             .branding_text{
                 padding-left: 1.5vw;
-    
                 p{
                     font-family: 'Montserrat', sans-serif; 
                     margin-top: 10px; 
@@ -508,7 +507,7 @@
         width: 65%;
         margin-top: 140px;
         padding-left: 2vw;
-    
+        font-weight: 600;
         .digital_mesa{
             display: flex;
             align-items: center;
@@ -586,7 +585,7 @@
         width: 90%;
         margin-top: 90px;
         padding-left: 2vw;
-    
+        font-weight: 600;
         .comunicacion_qw{
             display: flex;
             align-items: center;
