--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -117,6 +117,7 @@
                 h4{
                     font-family: 'Montserrat', sans-serif;
                     font-size: 14px;
+                    font-weight: 500;
                 }
 
                 img{
