--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -96,6 +96,7 @@ footer{
                 margin-left: 10px;
                 margin-top: 5px;
                 margin-bottom: 8px;
+                cursor: pointer;
                 i{
                     background-color: #EC5A61;
                     color: #E8B4B7;
