--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -27,6 +27,7 @@ footer{
                     margin-left: 10px;
                     margin-top: 15px;
                     margin-bottom: 15px;
+                    cursor: pointer;
                     i{
                         background-color: #EC5A61;
                         color: #E8B4B7;
