--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background: #dcd0c2;
+  background: #ee8309;
   font-size: 18px;
   position: fixed;
   width: 100%;
@@ -198,7 +198,6 @@
                 top: 70px;
                 padding: 0;
                 background: #dcd0c2;
-                height: calc(100% - 70px);
                 overflow-y: auto;
                 transition: all 1s;
                 left: -300%;
