--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@100&family=Nunito:wght@200&family=Roboto+Condensed:ital@1&family=Roboto:wght@100&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
 
 body {
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'Roboto', sans-serif;
+  width: 100%; }
 
 .english {
   display: none; }
@@ -86,6 +86,7 @@ body {
         .header .navbar .navbarList .nav_item .nav_link {
           text-decoration: none;
           color: black;
+          font-family: 'Roboto', sans-serif;
           font-size: 15px;
           font-weight: 600;
           margin: 0 10px; }
@@ -109,7 +110,8 @@ body {
             border-bottom: 4px solid crimson; }
         .header .navbar .navbarList .nav_item .nav_linkMenu__active {
           background: none;
-          border-bottom: 4px solid crimson; }
+          border-bottom: 4px solid crimson;
+          padding-bottom: 5px; }
       .header .navbar .navbarList .btn_idioma {
         background: none;
         border-radius: 50px;
@@ -221,7 +223,8 @@ footer {
         margin-right: 10px;
         margin-left: 10px;
         margin-top: 15px;
-        margin-bottom: 15px; }
+        margin-bottom: 15px;
+        cursor: pointer; }
         footer .contacto_footer .buttons ul li i {
           background-color: #EC5A61;
           color: #E8B4B7;
@@ -262,7 +265,7 @@ footer {
     footer .design_footer h5 {
       font-family: 'Montserrat', sans-serif;
       font-size: 22px;
-      font-weight: 500;
+      font-weight: 600;
       text-align: center; }
     footer .design_footer ul {
       list-style: none; }
@@ -270,7 +273,8 @@ footer {
         margin-right: 10px;
         margin-left: 10px;
         margin-top: 5px;
-        margin-bottom: 8px; }
+        margin-bottom: 8px;
+        cursor: pointer; }
         footer .design_footer ul li i {
           background-color: #EC5A61;
           color: #E8B4B7;
@@ -280,7 +284,8 @@ footer {
           margin-right: 5px; }
         footer .design_footer ul li p {
           font-family: 'Montserrat', sans-serif;
-          font-size: 16px; }
+          font-size: 16px;
+          font-weight: 600; }
 
 @media (max-width: 1115px) {
   footer {
@@ -293,10 +298,7 @@ footer {
     height: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    grid-template-areas: 'logo'
- 'btn'
- 'links'
- 'designers'; }
+    grid-template-areas: 'logo' 'btn' 'links' 'designers'; }
     footer .logo_footer {
       margin-top: 20px;
       height: 97px;
@@ -334,7 +336,6 @@ footer {
         display: block; }
       footer .design_footer h5 {
         font-size: 4vw;
-        font-weight: bold;
         text-align: left;
         margin-left: 10px; }
       footer .design_footer .design_list_resp {
@@ -542,47 +543,49 @@ footer {
         width: 262px;
         height: 365px;
         margin: 10px 20px; }
-    .main_top .sectionProyectos .proyectos1 {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      grid-template-areas: 'digital1 digital1'
- 'branding1 comunicacion1'; }
-      .main_top .sectionProyectos .proyectos1 .digital1 {
-        grid-area: digital1;
-        width: 660px;
-        height: 240px; }
-      .main_top .sectionProyectos .proyectos1 .branding1 {
-        margin-top: 10px;
-        grid-area: branding1;
-        width: 320px;
-        height: 240px; }
-      .main_top .sectionProyectos .proyectos1 .comunicacion1 {
-        margin-top: 10px;
-        grid-area: comunicacion1;
-        width: 320px;
-        height: 240px; }
-    .main_top .sectionProyectos .proyectos2 {
-      margin-top: 40px;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      grid-template-areas: 'branding2 branding2'
- 'digital2 comunicacion2'; }
-      .main_top .sectionProyectos .proyectos2 .digital2 {
-        margin-top: 10px;
-        grid-area: digital2;
-        width: 320px;
-        height: 240px; }
-      .main_top .sectionProyectos .proyectos2 .branding2 {
-        grid-area: branding2;
-        width: 660px;
-        height: 240px; }
-      .main_top .sectionProyectos .proyectos2 .comunicacion2 {
-        margin-top: 10px;
-        grid-area: comunicacion2;
-        width: 320px;
-        height: 240px; } }
+    .main_top .sectionProyectos {
+      margin-left: 0;
+      padding: 0; }
+      .main_top .sectionProyectos .proyectos1 {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 'digital1 digital1' 'branding1 comunicacion1';
+        grid-column-gap: 1vw; }
+        .main_top .sectionProyectos .proyectos1 .digital1 {
+          grid-area: digital1;
+          width: 100%;
+          height: 240px; }
+        .main_top .sectionProyectos .proyectos1 .branding1 {
+          margin-top: 10px;
+          grid-area: branding1;
+          width: 100%;
+          height: 240px; }
+        .main_top .sectionProyectos .proyectos1 .comunicacion1 {
+          margin-top: 10px;
+          grid-area: comunicacion1;
+          width: 100%;
+          height: 240px; }
+      .main_top .sectionProyectos .proyectos2 {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 'branding2 branding2' 'digital2 comunicacion2';
+        grid-column-gap: 3vw; }
+        .main_top .sectionProyectos .proyectos2 .digital2 {
+          margin-top: 10px;
+          grid-area: digital2;
+          width: 100%;
+          height: 240px; }
+        .main_top .sectionProyectos .proyectos2 .branding2 {
+          grid-area: branding2;
+          width: 100%;
+          height: 240px; }
+        .main_top .sectionProyectos .proyectos2 .comunicacion2 {
+          margin-top: 10px;
+          grid-area: comunicacion2;
+          width: 100%;
+          height: 240px; } }
 
 @media only screen and (max-width: 1024px) {
   .pre-title {
@@ -853,8 +856,8 @@ footer {
 @media only screen and (max-width: 768px) {
   .timeline ul li {
     margin-left: 10px;
-    margin-right: 20px;
-    transform: translateX(30px); }
+    transform: translateX(30px);
+    width: 90%; }
     .timeline ul li::after {
       content: '';
       position: absolute;
@@ -887,7 +890,7 @@ footer {
   .timeline ul::before {
     content: '';
     position: absolute;
-    height: 81%;
+    height: 80%;
     width: 4px;
     background-color: black;
     left: 2.5%;
@@ -904,7 +907,7 @@ footer {
   .all_description .description_about {
     background-color: #E8B4B7;
     width: 100%;
-    height: 46vh;
+    height: min-content;
     padding-top: 16px;
     padding-bottom: 36px;
     padding-left: 16px;
@@ -915,9 +918,14 @@ footer {
       width: 100%;
       padding-right: 4vw;
       font-family: 'Montserrat', sans-serif;
-      font-size: 2.7vw;
+      font-size: 2.9vw;
       font-weight: 300;
-      line-height: 22px; }
+      line-height: 22px; } }
+    @media only screen and (max-width: 768px) and (min-width: 565px) {
+      .all_description .description_about .text_about {
+        font-size: 2.6vw; } }
+
+@media only screen and (max-width: 768px) {
     .all_description .description_about .title_about {
       font-family: 'DM Serif Display', serif;
       font-size: 36px;
@@ -1731,7 +1739,7 @@ footer {
     display: flex;
     height: 911px; }
   .sidebarServicios {
-    width: 16vw;
+    width: 18vw;
     height: 911px;
     background: #E8B4B7;
     display: flex;
@@ -1742,14 +1750,14 @@ footer {
   .linkSidebar {
     display: block;
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.1vw;
+    font-size: 1.4vw;
     font-weight: 600;
     color: #FFFFFF;
-    margin: 80px 0;
-    padding-left: 40px;
+    margin: 20px 0;
+    padding-left: 34px;
     cursor: pointer;
     height: 67px;
-    width: 16vw;
+    width: 18vw;
     line-height: 67px; }
     .linkSidebar:hover {
       background: #FFFFFF;
