--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -87,8 +87,8 @@
         ul{
             li{
                 margin-left: 10px;
-                margin-right: 20px;
                 transform: translateX(30px);
+                width: 90%;
                 &::after{
                     content:'';
                     position: absolute;
@@ -128,7 +128,7 @@
             &::before{
                 content:'';
                 position: absolute;
-                height: 81%;
+                height: 80%;
                 width: 4px;
                 background-color: black;
                 left: 2.5%;
@@ -152,7 +152,7 @@
         .description_about{
             background-color: #E8B4B7;
             width: 100%; 
-            height: 46vh;  
+            height: min-content;  
             padding-top:16px;
             padding-bottom: 36px;
             padding-left: 16px;
@@ -163,9 +163,12 @@
                 width: 100%;
                 padding-right: 4vw;
                 font-family: 'Montserrat', sans-serif;
-                font-size: 2.7vw;
+                font-size: 2.9vw;
                 font-weight: 300;
                 line-height: 22px;
+                @media (min-width:565px){
+                    font-size: 2.6vw;
+                }
             
             }
             .title_about{
