--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,16 +1,13 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@100&family=Nunito:wght@200&family=Roboto+Condensed:ital@1&family=Roboto:wght@100&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-<<<<<<< HEAD
   font-family: 'Roboto', sans-serif;
-=======
-    width: 100vw;
->>>>>>> e30fa8b5a1bb831abf58c6473f9d00c43d4c1ebf
+  width: 100%;
 }
 
 .english{
