--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -192,6 +192,7 @@
                 align-items: center;
                 border-radius: 5px;
                 margin-right: 0;
+                height: 100vh;
                 margin-left: 40%;
                 width: 200px;
                 position: fixed;
