--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@100&family=Nunito:wght@200&family=Roboto+Condensed:ital@1&family=Roboto:wght@100&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  width: 100%; }
+  font-family: 'Roboto', sans-serif; }
 
 .english {
   display: none; }
@@ -24,13 +24,13 @@ body {
   background: #dcd0c2;
   font-size: 18px;
   position: fixed;
-  width: 100%;
+  width: 100vw;
   height: 80px;
   top: 0;
   left: 0;
   z-index: 20; }
   .header .navbar {
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
@@ -155,7 +155,8 @@ body {
       margin-left: 13vw;
       padding-right: 20px; }
       .header .navbar .logo .titulo_logo {
-        font-size: 3vw; }
+        font-size: 3vw;
+        width: 40vw; }
     .header .navbar .nav_responsive {
       display: flex;
       flex-flow: row nowrap; }
@@ -359,7 +360,8 @@ footer {
       font-size: 14px; } }
 
 .main_top {
-  margin-top: 100px; }
+  margin-top: 100px;
+  overflow-x: hidden; }
   .main_top .section1 {
     width: 100%;
     height: 640px;
@@ -527,7 +529,7 @@ footer {
   .main_top {
     margin-top: 0; }
     .main_top .section1 {
-      margin-top: 20px;
+      margin-top: 50px;
       margin-bottom: 0; }
       .main_top .section1 .sectionHola {
         width: 100vw; }
@@ -543,7 +545,7 @@ footer {
       .main_top .section2 .brandingHome {
         width: 262px;
         height: 365px;
-        margin: 10px 20px; }
+        margin: top 20px; }
     .main_top .sectionProyectos {
       margin: 0;
       padding: 0; }
