--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,6 +1,6 @@
 .main_top{
     margin-top: 100px;
-
+    overflow-x: hidden;
     .section1{
         width: 100%;
         height: 640px;
@@ -231,7 +231,7 @@
   
 
         .section1{
-            margin-top: 20px;
+            margin-top: 50px;
             margin-bottom: 0;
 
             .sectionHola{
@@ -259,7 +259,7 @@
             .brandingHome{
                 width: 262px;
                 height: 365px;
-                margin: 10px 20px;
+                margin: top 20px;
             }
         
         }
