--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@100&family=Nunito:wght@200&family=Roboto+Condensed:ital@1&family=Roboto:wght@100&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +7,6 @@
 }
 body {
   font-family: 'Roboto', sans-serif;
-  width: 100%;
 }
 
 .english{
