--- a/css/styles.css
+++ b/css/styles.css
@@ -368,8 +368,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 100px;
-    margin-top: 100px; }
+    margin-bottom: 100px; }
     .main_top .section1 .sectionHola {
       padding-left: 40px;
       width: 620px;
