--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -268,7 +268,7 @@
         .description_about{
             background-color: #E8B4B7;
             width: 45vw; 
-            height: 30vh;
+            height: min-content;
             padding-top:3vh;
             padding-bottom: 36px;
             padding-left: 16px;
