--- a/css/styles.css
+++ b/css/styles.css
@@ -784,10 +784,8 @@ footer {
   .contact {
     position: relative;
     width: 100%;
-    margin-top: 100px; }
-  .footer_form {
-    position: absolute;
-    bottom: 0; } }
+    margin-top: 100px;
+    height: 71.1vh; } }
 
 .timeline_section {
   margin-bottom: 6%; }
