--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -193,10 +193,9 @@
     .contact {
       position: relative;
       width: 100%;
-      margin-top: 100px; }
-    .footer_form {
-      position: absolute;
-      bottom: 0; 
-    } 
+      margin-top: 100px; 
+      height: 71.1vh;
+    }
+
 }
   
