--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -68,7 +68,8 @@
                 }
                 a{
                     text-decoration: none;
-                    
+                    padding: 15px;
+                    color: #FFFFFF;
                 }
 
                 @media (max-width: 1024px) {
